============================================================
          Notes Manager v0.4.1 (01-01-2018)
============================================================
 - Image to PDF Generator:
	- Minor bug fix. Earlier, if the file 'Image_To_PDF_Generator.py' was imported into another python program,
	    it used to execute the main method in 'Image_To_PDF_Generator.py'
	- .idea directory removed.
============================================================
============================================================


============================================================
          Notes Manager v0.4 (16-07-2017)
============================================================
 - PyCharm files (.idea directory) added
 - README.md updated
 - Image to PDF Generator:
	- Sample files for Bookmarks and Meta-Data added
 	- Empty Images directory added
 	- README.md added
============================================================
============================================================


============================================================
          Notes Manager v0.3.2 (16-07-2017)
============================================================
 - Image to PDF Generator:
	- In Bookmarks, offset can be added
 	- In Bookmarks, individual page numbers can be mentioned
 	- Bug Fix: Program used to crash when the Bookmarks file or Meta-Data file or Images folder doesn't exist
 	- Bug Fix: Program used to crash when reading meta-data (if it exists)
 	- Code refined and Optimised
============================================================
============================================================


============================================================
          Notes Manager v0.3.1 (15-07-2017)
============================================================
 - Image to PDF Generator:
	- Added new optional argument - Meta-Data file with default value 'Meta-Data.txt'